# ghc-typelits-proof-assist

./: .envrc  .gitignore  .hlint.yaml  README.md  flake.nix  ghc-typelits-proof-assist.cabal  preamble  prototype-ghc-prover.cabal
app/: Main.hs
examples/: Intro.hs
examples/Intro/: AgdaProof.hs  CoqProof.hs  LeanProof.hs
nix/: lib.nix  override-ghc9121.nix  override-ghc9141.nix
nix/modules/: formatter.nix  haskell.nix
src/: Description.hs  ProverPlugin.hs  ProverPrototype.hs
src/GHC/TypeNats/: Proof.hs
src/GHC/TypeNats/Proof/: Plugin.hs
src/GHC/TypeNats/Proof/Plugin/: Comment.hs  Config.hs  KnownTypes.hs  Proof.hs  Prover.hs
src/GHC/TypeNats/Proof/Plugin/Prover/: Agda.hs  Coq.hs  Lean.hs  Tynal.hs
tests/: Main.hs
tests/Test/GHC/TypeNats/Proof/Plugin/: Agda.hs  Coq.hs  Lean.hs
