cabal-version:      2.4
name:               ghc-typelits-proof-assist
synopsis:           GHC Plugin to exchange evidence with proof assistants
description:        `ghc-typelits-proof-assist` is a GHC plugin enabling the
                    developer to rely on an external proof assistant (e.g., Agda
                    or Rocq) to prove statements that are either impossible or
                    too difficult to prove with the existing constraint solver
                    of GHC.
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             QBayLogic B.V.
maintainer:         devops@qbaylogic.com
copyright:          Copyright © 2024-2026 QBayLogic B.V.
category:           Type System
homepage:           https://clash-formal.org
bug-reports:        https://github.com/clash-lang/ghc-typelits-proof-assist/issues
stability:          experimental
tested-with:        GHC == 9.10.3,
                    GHC == 9.12.4,
                    GHC == 9.14.1
extra-source-files: LICENSE
                    README.md

source-repository head
  type: git
  location: https://github.com/clash-lang/ghc-typelits-proof-assist

flag examples
  description:
    Build the example applications. All of the supported proof
    assistants must be present in order to verify the correctness of
    the utilized proofs.
  default: False
  manual: True

common common-options
  default-language: GHC2024
  ghc-options: -Wall -Wcompat
  default-extensions:
    MultiWayIf
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    TypeFamilies
    ViewPatterns
  build-depends:
    , base >= 4.20 && < 4.23

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    GHC.TypeNats.Proof
    GHC.TypeNats.Proof.Plugin
  other-modules:
    GHC.TypeNats.Proof.Plugin.KnownTypes
    GHC.TypeNats.Proof.Plugin.Comment
    GHC.TypeNats.Proof.Plugin.Config
    GHC.TypeNats.Proof.Plugin.Proof
    GHC.TypeNats.Proof.Plugin.Prover
    GHC.TypeNats.Proof.Plugin.Prover.Tynal
    GHC.TypeNats.Proof.Plugin.Prover.Agda
    GHC.TypeNats.Proof.Plugin.Prover.Coq
    GHC.TypeNats.Proof.Plugin.Prover.Lean
  build-depends:
    , containers >= 0.7 && < 0.9
    , directory >= 1.3 && < 1.4
    , filepath >= 1.5 && < 1.6
    , ghc >= 9.10 && < 9.15
    , ghc-typelits-extra >= 0.5.3 && < 0.6
    , ghc-tcplugin-api >= 0.18 && < 0.19
    , process >= 1.6 && < 1.7
    , string-combinators >= 0.6 && < 0.7
    , transformers >= 0.6 && < 0.7

library examples
  import: common-options
  hs-source-dirs: examples
  if !flag(examples)
    buildable: False
  else
    build-depends:
      , ghc-typelits-proof-assist
  exposed-modules:
    Intro
    Intro.CoqProof
    Intro.AgdaProof
    Intro.LeanProof

test-suite compile
  import: common-options
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options:
    -threaded
    -fplugin=GHC.TypeNats.Proof.Plugin
    -fplugin-opt=GHC.TypeNats.Proof.Plugin:VerifyProofs=True
  main-is: Main.hs
  other-modules:
    Test.GHC.TypeNats.Proof.Plugin.Agda
    Test.GHC.TypeNats.Proof.Plugin.Coq
    Test.GHC.TypeNats.Proof.Plugin.Lean
  build-depends:
    , ghc-typelits-proof-assist
