cabal-version:      2.4
name:               prototype-ghc-prover
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             QBayLogic B.V.
maintainer:         devops@qbaylogic.com
copyright:          Copyright © 2024-2025 QBayLogic B.V.
category:           Type System
homepage:

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A prototype for a plugin enabling GHC to communicate with a prover.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

flag examples
  description:
    Build the example applications. All of the supported proof
    assistants must be present in order to verify the correctness of
    the utilized proofs.
  default: False
  manual: True

common common-options
  default-language: GHC2024
  ghc-options: -Wall -Wcompat
  default-extensions:
    MultiWayIf
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    TypeFamilies
    ViewPatterns
  build-depends:
    , base >= 4.20 && < 4.21

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    GHC.TypeNats.Proof
    GHC.TypeNats.Proof.Plugin
  other-modules:
    GHC.TypeNats.Proof.Plugin.KnownTypes
    GHC.TypeNats.Proof.Plugin.Comment
    GHC.TypeNats.Proof.Plugin.Config
    GHC.TypeNats.Proof.Plugin.Proof
    GHC.TypeNats.Proof.Plugin.Prover
    GHC.TypeNats.Proof.Plugin.Prover.Tynal
    GHC.TypeNats.Proof.Plugin.Prover.Agda
    GHC.TypeNats.Proof.Plugin.Prover.Coq
    GHC.TypeNats.Proof.Plugin.Prover.Lean
  build-depends:
    , containers
    , directory
    , filepath
    , ghc >= 9.10 && < 9.12
    , ghc-typelits-extra
    , process
    , string-combinators
    , transformers

library examples
  import: common-options
  hs-source-dirs: examples
  if !flag(examples)
    buildable: False
  else
    build-depends:
      , base
      , prototype-ghc-prover
  exposed-modules:
    Intro
    Intro.CoqProof
    Intro.AgdaProof
    Intro.LeanProof

test-suite compile
  import: common-options
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options:
    -threaded
    -fplugin=GHC.TypeNats.Proof.Plugin
    -fplugin-opt=GHC.TypeNats.Proof.Plugin:VerifyProofs=True
  main-is: Main.hs
  other-modules:
    Test.GHC.TypeNats.Proof.Plugin.Agda
    Test.GHC.TypeNats.Proof.Plugin.Coq
    Test.GHC.TypeNats.Proof.Plugin.Lean
  build-depends:
    , base
    , ghc-typelits-proof-assist
